# RT4-Rust-Server

./: .gitignore  Cargo.toml
src/: main.rs
src/cache/: Cargo.toml
src/cache/src/: file_handler.rs  lib.rs  version_trailer.rs  xtea.rs
src/constants/: Cargo.toml
src/constants/src/: js5_archive.rs  js5_config_group.rs  js5_in.rs  js5_out.rs  js5_service.rs  lib.rs  login_out.rs  proxy.rs  rsa.rs  server_addresses.rs  title_protocol.rs  window_mode.rs
src/engine/: Cargo.toml  neptune.toml
src/engine/data/src/pack/: obj.pack
src/engine/data/src/scripts/: engine.rs2
src/engine/data/src/scripts/login_logout/: login.rs2  logout.rs2
src/engine/src/: engine.rs  engine_stat.rs  game_connection.rs  lib.rs  main.rs
src/engine/src/entity/: block_walk.rs  entity.rs  entity_lifecycle.rs  entity_list.rs  entity_queue_request.rs  entity_timer.rs  entity_type.rs  hittype.rs  interaction.rs  level_experience.rs  loc.rs  map_find_square_type.rs  mod.rs  move_restrict.rs  move_speed.rs  move_strategy.rs  network_player.rs  non_pathing_entity.rs  npc.rs  npc_event_request.rs  npc_iterator_type.rs  npc_mode.rs  npc_stat.rs  obj.rs  pathing_entity.rs  player.rs  player_type.rs  visibility.rs  window_status.rs
src/engine/src/entity/hunt/: hunt_check_not_too_strong.rs  hunt_mode_type.rs  hunt_nobody_near.rs  hunt_vis.rs  mod.rs
src/engine/src/grid/: coord_grid.rs  mod.rs
src/engine/src/grid/zone/: mod.rs  zone_event.rs  zone_grid.rs  zone_type_event.rs
src/engine/src/io/: client_state.rs  connection.rs  isaac.rs  mod.rs  packet.rs  packet_pool.rs  packet_tests.rs  rsa.rs
src/engine/src/io/benches/: packet_bench.rs
src/engine/src/io/client/: client_protocol.rs  client_protocol_category.rs  incoming_message.rs  mod.rs
src/engine/src/io/client/codec/: event_applet_focus_decoder.rs  event_camera_position_decoder.rs  message_decoder.rs  mod.rs  no_timeout_decoder.rs  verification_decoder.rs  window_status_decoder.rs
src/engine/src/io/client/handler/: message_handler.rs  mod.rs  no_timeout_handler.rs  verification_handler.rs  window_status_handler.rs
src/engine/src/io/client/model/: event_applet_focus.rs  event_camera_position.rs  mod.rs  no_timeout.rs  verification.rs  window_status.rs
src/engine/src/io/client/protocol/: client_protocol.rs  client_protocol_category.rs  client_protocol_repository.rs  mod.rs
src/engine/src/io/server/: info_message.rs  mod.rs  outgoing_message.rs  zone_message.rs
src/engine/src/io/server/codec/: if_opensub_encoder.rs  if_opentop_encoder.rs  message_encoder.rs  message_game_encoder.rs  mod.rs  rebuild_normal_encoder.rs
src/engine/src/io/server/model/: if_opensub.rs  if_opentop.rs  logout.rs  message_game.rs  mod.rs  rebuild_normal.rs
src/engine/src/io/server/prot/: mod.rs  server_protocol_priority.rs
src/engine/src/io/server/protocol/: info_protocol.rs  mod.rs  server_protocol.rs  server_protocol_repository.rs
src/engine/src/script/: mod.rs  script_file.rs  script_opcode.rs  script_opcode_pointers.rs  script_pointer.rs  script_provider.rs  script_runner.rs  script_state.rs  server_trigger_types.rs
src/engine/src/script/handlers/: core_ops.rs  math_ops.rs  mod.rs  player_ops.rs
src/engine/src/util/: base37.rs  bits.rs  doubly_linkable.rs  doubly_linklist.rs  linkable.rs  linklist.rs  mod.rs  namemap.rs  pack_file.rs  parse.rs  runescript_compiler.rs  symbols.rs
src/engine/src/util/cache/: loc_unpacker.rs  mod.rs  obj_unpacker.rs  param_helper.rs
src/engine/src/util/cache/config/: config_type.rs  loc_type.rs  mod.rs  obj_type.rs
src/io/: Cargo.toml
src/io/src/: client_state.rs  connection.rs  crc.rs  isaac.rs  js5_request.rs  js5_request_decoder.rs  lib.rs  packet.rs  packet_tests.rs  rsa.rs
src/io/src/benches/: packet_bench.rs
src/io/src/client/: client_protocol.rs  mod.rs
src/io/src/server/: info_message.rs  outgoing_message.rs
src/io/src/server/codec/: message_encoder.rs  mod.rs  rebuild_normal_encoder.rs
src/io/src/server/model/: rebuild_normal.rs
src/io/src/server/prot/: server_protocol.rs  server_protocol_repository.rs
src/js5/: Cargo.toml
src/js5/src/: handle_js5_connection.rs  js5_request.rs  js5_request_decoder.rs  js5_request_decoder_old.rs  js5_server.rs  lib.rs  main.rs
src/login/: Cargo.toml
src/login/src/: handshake.rs  main.rs
src/math/src/: trig.rs
src/proxy/: Cargo.toml
src/proxy/src/: main.rs
src/worldlist/: Cargo.toml
src/worldlist/src/: countries.rs  lib.rs  main.rs  worldlist_server.rs
