[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
io = { path = "./src/io" }
js5 = { path = "./src/js5" }
cache = { path = "./src/cache" }
tokio = "1.44.0"
criterion = "0.5.1"

[[bench]]
name = "packet_bench"
harness = false
path = "./src/io/src/benches/packet_bench.rs"