[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
rs2-cache = { path = "../../../rs2-cache/rust" }
once_cell = "1.20.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"