[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
rsmod-pathfinder = "5.0.4"
uuid = { version = "1.15.1", features = ["v4"] }
constants = { path = "../constants" }
rand = "0.9.0"
cache = {path = "../cache" }
num-bigint = "0.4.6"
lazy_static = "1.5.0"
tokio = { version = "1.44.1", features = ["full"] }
criterion = "0.5.1"

[[bench]]
name = "packet_bench"
harness = false
path = "./src/io/benches/packet_bench.rs"
