[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.26"
constants = { path = "../constants" }
cache = { path = "../cache" }
rs2-cache = { path = "C:/Users/sinor/RustroverProjects/rs2-cache/rust" }
rand = "0.9.0"
