[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.26"
constants = { path = "../constants" }
criterion = "0.5.1"
num-bigint = "0.4.6"
lazy_static = "1.5.0"
cache = { path = "../cache" }

[dev-dependencies]
criterion = "0.5.1"