[package]
name = "js5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
engine = { path = "../engine" }
cache = { path = "../cache" }
constants = { path = "../constants" }
rs2-cache = { path = "../../../rs2-cache/rust" }